fixed nav spacing

--- a/my-portfolio-site/src/components/topNav/topNav.scss
+++ b/my-portfolio-site/src/components/topNav/topNav.scss
@@ -96,7 +96,15 @@
     width: 100%;
 
     .wrapper {
-      padding-right: 2em;   
+      padding-right: 2em; 
+      
+      h2 {
+        padding-right: 10%;
+      }
+
+      h3 {
+        padding-right: 10%;
+      }
   }
     
   }
